styles.css
/* ... */
/* BASE */
body {
	color: var(--font-color);
	background: var(--background-color);
	margin: 0;
	padding: 0;
}
* {
	font-family: "Noto Sans", sans-serif;
	scroll-behavior: smooth;
	text-decoration: none;
}
.primary {
	color: var(--primary-color);
}
.secondary {
	color: var(--secondary-color);
}
.tertiary {
	color: var(--tertiary-color);
}
/* NAVIGATION BAR */
header {
	width: clamp(300px, 100%, 100%);
	top: 0;
	left: 0;
	backdrop-filter: blur(20px);
	-web-backdrop-filter: blur(20px);
	height: 4rem;
	display: flex;
	justify-content: space-between;
	align-items: center;
	position: fixed;
	z-index: 1000;
	box-shadow: 0 5px 15px -3px var(--button-color);
}
.header-name {
	font-size: clamp(0.8rem, 3vh, 2rem);
	color: var(--font-color);
	text-align: center;
	z-index: 1000;
	font-weight: 800;
	cursor: pointer;
	transition: transform 0.3s ease;
	margin-left: clamp(10px, 2vh, 50px);
	padding: 0.4rem;
	border-bottom: 2px solid var(--border-outline);
	border-left: 2px solid var(--border-outline);
	border-radius: 50%;
}
.header-name:hover {
	transform: scale(1.1);
}
#navbar ul {
	list-style-type: none;
	display: flex;
	justify-content: space-around;
	max-width: 100%;
	padding: 0.5rem;
	width: 100%;
}
#navbar a.nav-link {
	color: var(--font-color, white);
	font-size: clamp(0.8rem, 1.8vh, 1rem);
	margin: clamp(0.5rem, 1vw, 1rem);
	display: flex;
	flex-direction: column;
	align-items: center;
	position: relative;
	transition: transform 0.3s ease;
	font-weight: bold;
    letter-spacing: -0.5px;
}
#navbar a.nav-link:hover {
	transform: scale(1.1);
}
.hire-me {
	font-size: clamp(0.8rem, 5vh, 1rem);
	margin-right: clamp(10px, 2vh, 50px);
	padding: 0.5rem 1rem;
	border-radius: 3rem;
	border: 1px solid transparent;
	color: white;
	letter-spacing: 1px;
	cursor: pointer;
	transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease;;
	background: var(--button-color);
	font-weight: bold;
    letter-spacing: -0.5px;
}
.hire-me:hover {
  background-color: #4513c5;
}
/* WELCOME SECTION */
#welcome-section {
	display: flex;
	align-items: center;
	justify-content: center;
	width: 100%;
	min-height: 100vh;
}
.welcome-container {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 4rem;
	align-items: center;
	width: clamp (300px, 90%, 1200px);
}
.welcome-text {
	max-width: 600px;
}
.intro-text {
	font-size: clamp(1rem, 100vh, 1.5rem);
	color: var(--primary-color);
    letter-spacing: -0.5px;
    line-height: 120%;
	margin-bottom: 0;
}
h1 {
	font-size: 4rem;
  letter-spacing: -1px;
  line-height: 110%;
	margin: 0;
}
.sub-text {
	font-size: 1.5rem;
  line-height: 120%;
  letter-spacing: -0.5px;
	margin: 0.5rem 0;
}
.location {
	display: flex;
	font-size: 1rem;
  line-height: 120%;

}
.highlight {
	background-image: var(--highlight-color);
	-webkit-background-clip: text;
	background-clip: text;
	color: transparent;
	background-position: -100%;
	background-size: 300%;
	animation: highlight 5s infinite alternate-reverse;
}
/* WELCOME BUTTONS */
.welcome-buttons {
	margin: 16px 0;
}
.contact-btn {
	background-color: var(--button-color);
	color: var(--font-color);
	font-weight: bold;
	border: 1px solid transparent;
	border-radius: 30px;
	padding: 10px 20px;
	cursor: pointer;
	font-size: 1rem;
    letter-spacing: -0.5px;
	transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease;
}
.resume-btn {
	background-color: rgb(15, 15, 15);
	font-weight: bold;
	color: var(--font-color);
	border: 1px solid var(--border-outline);
	border-radius: 30px;
	padding: 10px 20px;
	margin: 0 10px;
	cursor: pointer;
  letter-spacing: -0.5px;
	font-size: 1rem;
	transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease;
}
.contact-btn:hover {
	background-color:#4513c5;
}
.resume-btn:hover {
	background-color: #161616;
}
button:hover {
	box-shadow: 0 10px 15px -3px var(--button-hover), 0 4px 6px -2px var(--button-hover);
}
button:focus,button:active {
	opacity: 0.85;
	box-shadow: none;
}
/* SOCIAL BUTTONS */
.fa.fa-github, .fa.fa-linkedin-square, .fa.fa-envelope {
	font-size: 2.5rem;
	color: var(--font-color);
}
.social-icons {
	margin-top: 20px;
	margin-bottom: 20px;
}
.social-icons a:nth-of-type(1) {
	margin: 0 8px;
}
.social-icons a:nth-of-type(2) {
	margin: 0 8px;
}
.social-icons a:nth-of-type(3) {
	margin: 0 8px;
}
.fa.fa-github:hover {
	color: var(--primary-color);
	transition: color 0.5s ease;
}
.fa.fa-linkedin-square:hover {
	color: var(--secondary-color);
	transition: color 0.5s ease;
}
.fa.fa-envelope:hover {
	color: var(--tertiary-color);
	transition: color 0.5s ease;
}
/* PROFILE PICTURE + SECRET PICTURE */
.welcome-image {
	width: 350px;
	height: 350px;
	perspective: 1000px;
}
.welcome-image-inner {
	position: relative;
	width: 100%;
	height: 100%;
	text-align: center;
	transition: transform 0.6s;
	transform-style: preserve-3d;
}
.welcome-image:hover .welcome-image-inner {
	transform: rotateY(180deg);
}
.welcome-image-front, .welcome-image-back {
	position: absolute;
	width: 100%;
	height: 100%;
	backface-visibility: hidden;
	border-radius: 50%;
	overflow: hidden;
	box-shadow: 0 10px 15px -3px var(--button-hover), 0 4px 6px -2px var(--button-hover);
}
.welcome-image img {
	width: 100%;
	height: 100%;
	object-fit: cover;
}
.welcome-image-front {
	transform: rotateY(0deg);
}
.welcome-image-back {
	transform: rotateY(180deg);
}
/* ABOUT ME SECTION */
#about-me-section {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	width: 100%;
	min-height: 90vh;
}
.about-me-container {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	width: 70%;
	max-width: 700px;
}
.about-me-header {
	text-align: center;
	font-size: 2rem;
  letter-spacing: -1px;
	margin-bottom: 2.5rem;
}
.about-me.paragraph {
  line-height: 150%;
  letter-spacing: -0.5px;
}
.summary-header {
  letter-spacing: -0.5px;
	margin: 0;
	padding: 0;
}
.education-title, .certificate-title {
	font-size: 1rem;
  letter-spacing: -0.5px;
}
/* ... */

